correctly aligns message
Former-commit-id: 3cbafac3894b7e9dc06c3c2788b6b8fa40388fef [formerly 78d6d9c603eb1b71da30e87157d8e7bf07c17c95 [formerly 23d99f65a4d519c4a996201f4a891f7ebb875e09]]
Former-commit-id: cbc5cd9ef520cca7da62a5b4c79b2d23a995cc2d
Former-commit-id: f35ccb089a1037aee8b6f605b8668c1651f3a327 [formerly cbbb6e54993489003e7c7b626f30903fc63d50fa]
Former-commit-id: 295d96503eda48dddb212a4104737ebfe2ae76df

--- a/frontend/app/assets/stylesheets/_suite.scss
+++ b/frontend/app/assets/stylesheets/_suite.scss
@@ -207,6 +207,9 @@
 			color: #000;
 		}
 	}
+	.digital-available {
+		margin-top: 5px;
+	}
 	h5.delivery + div {
 		margin-bottom: 1.25em;
 		a {
